[android] Remove DCHECK from RefreshTokenIsAvailable.

RefreshTokenIsAvailable is now called for accounts that are only present
in the Gaia cookies and that were previously not seeded yet. This leads
to the DCHECK in |OAuth2TokenServiceDelegateAndroid::MapAccountIdToAccountName()|
being fired. This is unexpected as the code should simply return false in that
case (not crash).

This CL removes this DCHECK when MapAccountIdToAccountName is called from
RefreshTokenIsAvailable.

Bug: 915238
Change-Id: I863a822a5429f9aef54d78bcf39d573ebf647e84
Reviewed-on: https://chromium-review.googlesource.com/c/1378139
Commit-Queue: Mihai Sardarescu <msarda@chromium.org>
Reviewed-by: Boris Sazonov <bsazonov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616729}
Former-commit-id: 7887f7a41498776a05d84d88812d033ff43fb7a3